[package]
name = "urun"
version = "0.91.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
eframe = "0.27.2"
egui = "0.27.2"
serde = "1.0.197"
serde_toml = "0.0.1"
shell-words = "1.1.0"
toml = "0.8.12"
